--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root" style="width: 100%; height: 100vh"></div>
+    <div id="modals-parent"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
